<resources>
    <string name="app_name">Tabuada Básica</string>
    <string name="btn_adicao">Adição</string>
    <string name="btn_subtracao">Subtração</string>
    <string name="btn_multiplicacao">Multiplicação</string>
    <string name="btn_divisao">Divisão</string>
    <string name="btn_sair">Sair</string>
    <string name="btn_sobre">Sobre</string>
    <string name="title_activity_adicao_main">Tabuada de +</string>
    <string name="title_activity_subtracao_main">Tabuada de -</string>
    <string name="title_activity_multiplicacao_main">Tabuada de X</string>
    <string name="title_activity_divisao_main">Tabuada de /</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Voltar</string>
    <string name="tabuada_0">Tabuada do  0</string>
    <string name="tabuada_1">Tabuada do  1</string>
    <string name="tabuada_2">Tabuada do  2</string>
    <string name="tabuada_3">Tabuada do  3</string>
    <string name="tabuada_4">Tabuada do  4</string>
    <string name="tabuada_5">Tabuada do  5</string>
    <string name="tabuada_6">Tabuada do  6</string>
    <string name="tabuada_7">Tabuada do  7</string>
    <string name="tabuada_8">Tabuada do  8</string>
    <string name="tabuada_9">Tabuada do  9</string>
    <string name="tabuada_10">Tabuada do 10</string>
    <string name="tabuada_td">Todas de 0 à 10</string>
    <string name="tabuada_adicao">Tabuada de +</string>
    <string name="tabuada_sub">Tabuada de -</string>
    <string name="tabuada_multi">Tabuada de x</string>
    <string name="tabuada_divi">Tabuada de /</string>
    <string name="title_activity_persona">Tabuada Personalizada</string>

    <string name="valor_1">Num 1</string>
    <string name="valor_2">Num 2</string>
    <string name="btn_persona">TABUADA PERSONALIZÁVEL</string>
    <string name="btn_cus_ad">+</string>
    <string name="btn_cus_su">-</string>
    <string name="btn_cus_mu">x</string>
    <string name="btn_cus_div">/</string>
    <string name="txt_menor_igual">>=</string>

    <!--Lista de elogios-->
    <string name="txt_elogio1">Muito bem!</string>
    <string name="txt_elogio2">Nossa incrível!</string>
    <string name="txt_elogio3">Meus parabéns!</string>
    <string name="txt_elogio4">Continue assim!</string>
    <string name="txt_elogio5">Eita! Que impressionante</string>

    <!--fim Lista de elogios-->


    <!--Lista de elogios erro-->

    <string name="txt_elogio_erro1">Não desista!</string>
    <string name="txt_elogio_erro2">Vai conseguir na próxima!</string>
    <string name="txt_elogio_erro3">Vamos, vamos!</string>
    <string name="txt_elogio_erro4">Mais uma vai!</string>
    <string name="txt_elogio_erro5">Na próxima é acerto!</string>


    <!--fim Lista de elogios erro-->


    <!--ADS tags  oficial ca-app-pub-9275202133724780/3108357143-->
    <!--teste ad banner cca-app-pub-3940256099942544/6300978111-->

    <string name="banner_ad">ca-app-pub-9275202133724780/3108357143</string>

    <!--Ad inter oficial cca-app-pub-3940256099942544/6300978111-->
    <!--Ad inter teste ca-app-pub-3940256099942544/1033173712-->

    <string name="inter_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="numeros">0123456789</string>
    <string name="ed_resposta">Responda</string>
    <string name="btn_aprovar">Verificar</string>
    <string name="btn_game">Game</string>
    <string name="txt_titulo_game">Game</string>
    <!--fim ADS -->
</resources>
