<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

            <item
                android:id="@+id/m00"

                android:title="@string/tabuada_0" />
            <item
                android:id="@+id/m1"

                android:title="@string/tabuada_1" />
            <item
                android:id="@+id/m2"

                android:title="@string/tabuada_2" />
            <item
                android:id="@+id/m3"

                android:title="@string/tabuada_3" />
            <item
                android:id="@+id/m4"

                android:title="@string/tabuada_4" />
            <item
                android:id="@+id/m5"

                android:title="@string/tabuada_5" />
            <item
                android:id="@+id/m6"

                android:title="@string/tabuada_6" />
            <item
                android:id="@+id/m7"

                android:title="@string/tabuada_7" />
            <item
                android:id="@+id/m8"

                android:title="@string/tabuada_8" />
            <item
                android:id="@+id/m9"

                android:title="@string/tabuada_9" />
            <item
                android:id="@+id/m10"

                android:title="@string/tabuada_10" />


    <item
        android:id="@+id/mt"

        android:title="@string/tabuada_td" />




</menu>
